# cards_scanner

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  clang_tidy.sh  conanfile.txt  rebuild.sh  run_ansible.sh  run_quality_tests.sh  run_test.sh  update_lock.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  lint_ansible.yml
ansible/: example_inventory.ini  set_up_raspi.yml
ansible/plays/: apt_update_upgrade.yml  download_and_install_opencv.yml  install_opencv_dependencies.yml
cmake/: OCRProjectConfig.cmake.in  Sanitizers.cmake
include/: card_processor.hpp
include/core/: imageProcessor.hpp
include/detection/: card_detector.hpp  card_processor.hpp  tilt_corrector.hpp
include/misc/: pic_helper.hpp
src/: CMakeLists.txt  card_processor.cpp  main.cpp
src/api/: CMakeLists.txt
src/api/impl/: scryfall_client.cpp
src/api/include/: scryfall_client.hpp
src/app/: main.cpp
src/core/: imageProcessor.cpp
src/detection/: CMakeLists.txt  card_detector.cpp  card_processor.cpp  tilt_corrector.cpp
src/detection/impl/: card_detector.cpp  card_text_ocr.cpp  region_extraction.cpp  tilt_corrector.cpp
src/detection/include/: card_detector.hpp  card_text_ocr.hpp  region_extraction.hpp  tilt_corrector.hpp
src/impl/detection/: card_detector.cpp  card_text_ocr.cpp  region_extraction.cpp  tilt_corrector.cpp
src/impl/misc/: path_helper.cpp  pic_helper.cpp
src/impl/workflow/: detection_builder.cpp
src/include/detection/: card_detector.hpp  card_text_ocr.hpp  region_extraction.hpp  tilt_corrector.hpp
src/include/misc/: path_helper.hpp  pic_helper.hpp
src/include/workflow/: detection_builder.hpp
src/misc/: CMakeLists.txt  pic_helper.cpp
src/misc/impl/: path_helper.cpp  pic_helper.cpp
src/misc/include/: path_helper.hpp  pic_helper.hpp
src/workflow/: CMakeLists.txt
src/workflow/impl/: detection_builder.cpp
src/workflow/include/: detection_builder.hpp
tests/integration/: CMakeLists.txt  test_card_detection.cpp  test_detection_builder.cpp
tests/unit/: CMakeLists.txt  test_load_image.cpp  test_ocr_preprocessing.cpp  test_region_extraction.cpp  test_scryfall_client.cpp  test_sort_corners.cpp
